--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 
 <html><head><title>Welcome to ~tilde.club~</title>
+
+  <link rel="stylesheet" type="text/css" href="css/styles.css">
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+  <script src="js/app.js"></script>
+  <script src="js/keypress.js"></script>
+
 <style type="text/css">
   * {
     font-size:13pt;font-weight:normal;
@@ -8,7 +14,7 @@
   table {
     border-collapse:collapse;
   }
-  
+
   td {
     border:6px double darkorange;padding:10px;
   }
