got the navigate function working, plus added the selected_link css class to index.html

--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
     font-weight:bold;
     padding-right:.25em;
   }
+
+  .selected_link {
+    background-color: green;
+  }
   
   .advisory {
     background:darkorange;
