knows whjat href its on

--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
   }
 
   .selected_link {
-    background-color: green;
+    /*background-color: green;*/
+    color:darkorange;
+    background:#000400;
+    border: 2px darkorange solid;
   }
   
   .advisory {
