ugly if else but it works

--- a/index.html
+++ b/index.html
@@ -94,7 +94,11 @@
 </style>
 <body><h1>$ welcome to tilde.club</h1>
 <p class="advisory">SERVICE ADVISORY: The IP address for tilde.club changed as the result of a systems crash. All is fine. On your home computer, remove the lines that mention tilde.club in ~/.ssh/known_hosts then log in again.</p>
-<table><tr><td><p>tilde.club is not a social network it is one tiny totally standard unix computer that people respectfully use together in their shared quest to build awesome web pages</p><h2>tilde.club can't handle any more new members right this moment we are very sorry :( But there is a <a href='http://goo.gl/forms/gRMRT1YBU4'>waitlist</a></h2><p>If you would like a list of <a href="http://tilde.club/~delfuego/tilde.24h.html">RECENTLY CHANGED PAGES</a> you can see that too</p><h3>here are the home pages of our users</h3><ol>
+<table><tr><td><p>tilde.club is not a social network it is one tiny totally standard unix computer that people respectfully use together in their shared quest to build awesome web pages</p><h2>tilde.club can't handle any more new members right this moment we are very sorry :( But there is a <a href='http://goo.gl/forms/gRMRT1YBU4'>waitlist</a></h2><p>If you would like a list of <a href="http://tilde.club/~delfuego/tilde.24h.html">RECENTLY CHANGED PAGES</a> you can see that too</p><h3>here are the home pages of our users</h3>
+
+<input type="text"></input>
+
+  <ol>
 <li><a href="/~_">_</a></li>
 <li><a href="/~4mvrs">4mvrs</a></li>
 <li><a href="/~aakash">aakash</a></li>
