--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html><head><title>Welcome to ~tilde.club~</title>
 
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-  <script src="js/keypress.js"></script>
+  <script src="js/key_navigation.js"></script>
 
 <style type="text/css">
   * {
