first draft of readme plus added a check fortextareas in focus

--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
   }
 
   .selected_link {
-    /*background-color: green;*/
     color:darkorange;
     background:#000400;
     border: 2px darkorange solid;
@@ -95,6 +94,7 @@
 <table><tr><td><p>tilde.club is not a social network it is one tiny totally standard unix computer that people respectfully use together in their shared quest to build awesome web pages</p><h2>tilde.club can't handle any more new members right this moment we are very sorry :( But there is a <a href='http://goo.gl/forms/gRMRT1YBU4'>waitlist</a></h2><p>If you would like a list of <a href="http://tilde.club/~delfuego/tilde.24h.html">RECENTLY CHANGED PAGES</a> you can see that too</p><h3>here are the home pages of our users</h3>
 
 <input type="text"></input>
+<textarea></textarea>
 
   <ol>
 <li><a href="/~_">_</a></li>
